# xYang

./: .cursorignore  .gitignore  CHANGELOG.md  FEATURES.md  IVI_Paper.md  LICENSE  PERFORMANCE.md  README.md  analyze_profile.py  meta-model-grammar.ebnf  profile.stats  profile_evaluator.py  pyproject.toml  requirements.txt  setup.py  test_progressive_parse.py
.cursor/commands/: validate.md
.github/workflows/: build-docs-bundle.yml  build-ts-dist.yml  hello.yml  publish-npm.yml  publish-pypi.yml  tests-ts.yml  tests.yml
artifacts/: xyang-ts.mjs
benchmarks/: benchmark.py
design/: dataflow.md  json-schema-xyang-profile.md  xpath-path-caching-evaluation.md  yang-identity.md
docs/: dataflow.md  duplicate-must-and-iteration.md  json-schema-xyang-profile.md  loc-and-complexity-yang-vs-json-parser.md  xyang.umd.min.js  yang-ebnf-supported-constructs.md
docs/anydata_validation/: index.html
examples/: anydata_validation_usage.py  basic_usage.py  generic-field.yaml  generic-field.yang  identity_roundtrip.yang  meta-model-phased.yang  meta-model.json  meta-model.yang  meta-model.yang.json  minimal-parents-test.yang  new-meta-model.yang
examples/ietf/: ietf-alarms@2019-09-11.yang
examples/ietf-yang-push/: README.md  subscriptions-info.json  yang-lib.xml
examples/openconfig/: README.md  openconfig-interfaces-subset.yang  openconfig_netlink.py  sample_interfaces.json
skills/xyang-model/: SKILL.md
src/xyang/: __init__.py  __main__.py  ast.py  augment_expand.py  document_validator.py  errors.py  identifier_ref.py  identity_graph.py  module.py  parser.py  refine_expand.py  semantic_validate.py  statement_parsers.py  statement_registry.py  uses_expand.py  validator.py
tests/: __init__.py  conftest.py  meta_model_data.py  standalone_xpath_evaluator.py  test_absolute_paths.py  test_anydata_anyxml.py  test_anydata_augment_merge.py  test_anydata_validation_extension.py  test_augment.py  test_basic.py  test_binary_type.py  test_bits.py  test_choice_case.py  test_choice_case_when.py  test_circular_uses.py  test_cli_include_path.py  test_coercion.py  test_computed_fields.py  test_config.py  test_config_ignored.py  test_current_context_in_predicate.py  test_deref.py  test_deref_standalone.py  test_duplicate_must_bug.py  test_dynamic_extensions.py  test_enum_validation.py  test_foreign_key.py  test_generic_field_example.py  test_grouping_uses.py  test_identity.py  test_if_feature.py  test_imported_string_concatenation.py  test_instance_identifier.py  test_leaf_list_current.py  test_leaf_must_relative_path.py  test_leafref_relative_path.py  test_list_key_uniqueness.py  test_minimal_parents.py  test_must_on_leafref_list.py  test_must_resolver_minimal.py  (+35 more)
tests/data/: composite_primary_key_sample.yaml  new_meta_model_sample.yaml
tests/json/: test_change_history_policy.py  test_choice_cases.py  test_generator.py  test_identity_json.py  test_if_features_json.py  test_integer_builtin_bounds.py  test_issue_choice_flat_instance_json_schema.py  test_item_type.py  test_leafref_json.py  test_meta_model_ast_identical.py  test_rpc_json.py  test_typedef.py
tests/libyang/: README.md  libyang_test_parents_child_fk_foreign_key.py  libyang_test_parents_type_matching.py  test_parents_child_fk_foreign_key.py  test_parents_type_matching.py
tests/meta-model/: FAILING_TESTS_ANALYSIS.md  README.md  __init__.py  test_must.py  (+31 more)
ts/: CHANGELOG.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
xYang/: __init__.py  ast.py  errors.py  module.py  parser.py  parser_context.py  statement_parsers.py  tokenizer.py  types.py  validator.py  xpath.py  xpath_parser.py
(+612 files in other folders)
