[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xYang"
version = "0.1.0"
description = "A Python library implementing a subset of YANG features focused on constraint validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Exergy LLC"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = []
# No runtime dependencies - pure Python implementation

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/exergy-connect/xYang"
Repository = "https://github.com/exergy-connect/xYang.git"
Issues = "https://github.com/exergy-connect/xYang/issues"

[project.scripts]
xyang = "xyang.__main__:main"

[tool.setuptools]
packages = ["xyang"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pyright]
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
