[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyang"
version = "0.1.0"
description = "A Python library implementing a subset of YANG features focused on constraint validation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Exergy LLC"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = []
# No runtime dependencies - pure Python implementation

[project.optional-dependencies]
# pytest 9 / black 26 need Python >= 3.10 to run; use pytest 8.x on 3.9 (see CI).
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/exergy-connect/xYang"
Repository = "https://github.com/exergy-connect/xYang.git"
Issues = "https://github.com/exergy-connect/xYang/issues"

[project.scripts]
xyang = "xyang.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
